# lib/api-spec/openapi.yaml
@@ -1437,9 +1437,6 @@ components:
           nullable: true
         isActive:
           type: boolean
-        totalStock:
-          type: integer
-          description: Total available stock items across all active products in this category
         createdAt:
           type: string
           format: date-time
@@ -1450,7 +1447,6 @@ components:
         - id
         - name
         - isActive
-        - totalStock
         - createdAt
         - updatedAt
 
